Bump Jepsen to 0.3.5 and adapt Docker environment